My first commit

--- a/HomeWork.html
+++ b/HomeWork.html
@@ -112,10 +112,10 @@
                <div class="input-group mt-3 mb-3"></div>
                <div class="input-group mb-3">
                   <div class="input-group prepend">
-                     <button class="btn btn-outline-danger" type="button" id="button-addon1" onclick="makeReadOnly()">Block</button>
-                     <input type="text" class="form-control" placeholder="I'am input" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                     <button class="btn btn-outline-danger" type="button" id="button-addon1" onclick="disableTxt()">Block</button>
+                     <input type="text" class="form-control" placeholder="I'am input" aria-label="Example text with button addon" aria-describedby="button-addon1" id="myText">
                      <div class="input-group-append">
-                        <button class="btn btn-outline-success" type="button" id="button-addon2" onclick="makeEditable()">Unblock</button>
+                        <button class="btn btn-outline-success" type="button" id="button-addon2" onclick="undisableTxt()">Unblock</button>
                      </div>
                   </div>
                </div>
