--- a/HomeWork.html
+++ b/HomeWork.html
@@ -22,7 +22,7 @@
                Paspaudus mygtuka iskvieskite <span class="red"> Alert </span> ("Hello
                World !")
                <div class="card-body text-center">
-                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                  <button type="button" class="btn btn-primary" onclick="myFunction()">
                   Click On Me
                   </button>
                </div>
