--- a/04.23.temperature.html
+++ b/04.23.temperature.html
@@ -8,11 +8,8 @@
   <body>
     <form action="temperature.php" method="POST">
       <input type="number" name="temperature" />
-      C<input type="radio" name="units" value="C" /> F<input
-        type="radio"
-        name="units"
-        value="F"
-      />
+      C<input type="radio" name="units" value="C" /> 
+      F<input type="radio" name="units"value="F" />
       <input type="submit" name="submit" value="CONVERT" />
     </form>
   </body>
